2003-07-01  Bolian Yin <bolian.yin@sun.com>

       Fixes #45274

       * gui/e-week-view.c: implemented tabbing though events in week view.

2003-06-30  Rodrigo Moya <rodrigo@ximian.com>

	* cal-client/cal-client.c: removed usage of WombatClient.
	(client_get_password_cb, client_forget_password_cb): removed.
	(real_open_calendar): don't create the WombatClient object.
	(cal_client_init, cal_client_finalize): removed WombatClient
	related code.
	(cal_client_finalize): re-enabled call to destroy_factories.

	* pcs/cal.c: removed usage of WombatClient interface.
	(cal_construct): don't get a reference to the WombatClient.
	(cal_get_password, cal_forget_password): removed unused functions.

	* conduits/calendar/Makefile.am:
	* cal-client/Makefile.am: removed references to libwombat.

2003-06-27  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/send-comp.[ch] (send_component_dialog):
	* gui/dialogs/cancel-comp.[ch] (cancel_component_dialog): added a
	GtkWindow argument for callers to specify the parent window.

	* gui/dialogs/changed-comp.[ch] (changed_component_dialog): added
	'parent' argument and use GtkMessageDialog instead of
	gnome_question_dialog.

	* gui/e-calendar-table.c (e_calendar_table_delete_selected):
	* gui/e-day-view.c (e_day_view_delete_event_internal,
	  e_day_view_on_cut, e_day_view_finish_long_event_resize,
	  e_day_view_finish_resize, e_day_view_on_editting_stopped,
	  e_day_view_on_top_canvas_drag_data_received, selection_received):
	* gui/e-week-view.c (e_week_view_delete_event_internal,
	  e_week_view_on_cut, e_week_view_on_editing_stopped,
	  selection_received):
	* gui/dialogs/event-editor.c (cancel_meeting_cmd):
	* gui/dialogs/task-editor.c (cancel_task_cmd):
	* gui/dialogs/comp-editor.c (delete_cmd, obj_removed_cb): pass the parent window to
	the *_component_dialog() functions.

	* gui/dialogs/delete-comp.c (delete_component_dialog): use the 'widget'
	argument to get the parent window for the dialog.
