@@ -1,3 +1,13 @@
+2003-07-01  Rodrigo Moya <rodrigo@ximian.com>
+
+	Fixes #45524
+
+	* gui/calendar-commands.c: use stock icons where approppriate.
+
+	* gui/tasks-control.c: removed EPixmaps structure, since we only use
+	stock icons now.
+	(tasks_control_activate): no need to call e_pixmaps_update.
+
 2003-07-01  Bolian Yin <bolian.yin@sun.com>
 
        Fixes #45274
